Implemented order/dispatch/trip and completed food listing create

--- a/src/pages/services/Listing/Listing.css
+++ b/src/pages/services/Listing/Listing.css
@@ -1,6 +1,6 @@
-.trip-table__container {
-    position: absolute;
+.order-table__container {
     left: 255px;
     width: 80%;
     overflow: hidden;
+    position: absolute;
 }
