--- a/src/pages/services/support/NewSupportForm.css
+++ b/src/pages/services/support/NewSupportForm.css
@@ -6,3 +6,10 @@
     display: flex;
     flex-direction: row-reverse;
 }
+.dropdown-demo .p-dropdown {
+    width: 14rem;
+}
+
+.dropdown-demo .country-item-value img.flag {
+    width: 17px;
+}
